--- a/src/Hjmos.BaseControls/Themes/Styles/ListBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ListBox.xaml
@@ -155,4 +155,27 @@
     </Style>
 
 
+
+    <Style x:Key="ListBoxBaseTabStyle" TargetType="controls:ListBox">
+        <Setter Property="ItemContainerStyleSelector" Value="{StaticResource ListBoxItemTabBaseStyle}"/>
+        <Setter Property="Background" Value="{DynamicResource RegionBrush}"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:ListBox">
+                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="{TemplateBinding controls:ListBoxAttach.CornerRadius}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <ItemsPresenter Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+
 </ResourceDictionary>
