--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -1,50 +1,49 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    >
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ListBox.xaml"/>
-        <ResourceDictionary Source="Button.xaml"/>
-        <ResourceDictionary Source="ToggleButton.xaml"/>
-        <ResourceDictionary Source="ItemsControl.xaml"/>
-        <ResourceDictionary Source="RunningBlock.xaml"/>
-        <ResourceDictionary Source="Divider.xaml"/>
-        <ResourceDictionary Source="GroupBox.xaml"/>
-        <ResourceDictionary Source="Drawer.xaml"/>
-        <ResourceDictionary Source="FloatingBlock.xaml"/>
-        <ResourceDictionary Source="Growl.xaml"/>
-        <ResourceDictionary Source="Slider.xaml"/>
-        <ResourceDictionary Source="ScrollViewer.xaml"/>
-        <ResourceDictionary Source="NumericUpDown.xaml"/>
-        <ResourceDictionary Source="TextBox.xaml"/>
-        <ResourceDictionary Source="ColorPicker.xaml"/>
-        <ResourceDictionary Source="Loading.xaml"/>
-        <ResourceDictionary Source="PasswordBox.xaml"/>
-        <ResourceDictionary Source="RadioButton.xaml"/>
-        <ResourceDictionary Source="ButtonGroup.xaml"/>
-        <ResourceDictionary Source="ProgressBar.xaml"/>
-        <ResourceDictionary Source="ImageViewer.xaml"/>
-        <ResourceDictionary Source="Pagination.xaml"/>
-        <ResourceDictionary Source="ComboBox.xaml"/>
-        <ResourceDictionary Source="DataGrid.xaml"/>
-        <ResourceDictionary Source="ContextMenu.xaml"/>
-        <ResourceDictionary Source="CheckBox.xaml"/>
-        <ResourceDictionary Source="SearchBar.xaml"/>
-        <ResourceDictionary Source="Weather.xaml"/>
-        <ResourceDictionary Source="ToggleBlock.xaml"/>
-        <ResourceDictionary Source="Expander.xaml"/>
-        <ResourceDictionary Source="Calendar.xaml"/>
-        <ResourceDictionary Source="Clock.xaml"/>
-        <ResourceDictionary Source="CalendarWithClock.xaml"/>
-        <ResourceDictionary Source="DateTimePicker.xaml"/>
-        <ResourceDictionary Source="DatePicker.xaml"/>
-        <ResourceDictionary Source="RichTextBox.xaml"/>
-        <ResourceDictionary Source="TabComboBox.xaml"/>
-        <ResourceDictionary Source="Tag.xaml"/>
-        <ResourceDictionary Source="Border.xaml"/>
-        <ResourceDictionary Source="TabControl.xaml"/>
-        <ResourceDictionary Source="Badge.xaml"/>
-        <ResourceDictionary Source="StepBar.xaml"/>
-        <ResourceDictionary Source="TreeView.xaml"/>
-        <ResourceDictionary Source="ContentComboBox.xaml"/>
+        <ResourceDictionary Source="ListBox.xaml" />
+        <ResourceDictionary Source="Button.xaml" />
+        <ResourceDictionary Source="ToggleButton.xaml" />
+        <ResourceDictionary Source="ItemsControl.xaml" />
+        <ResourceDictionary Source="RunningBlock.xaml" />
+        <ResourceDictionary Source="Divider.xaml" />
+        <ResourceDictionary Source="GroupBox.xaml" />
+        <ResourceDictionary Source="Drawer.xaml" />
+        <ResourceDictionary Source="FloatingBlock.xaml" />
+        <ResourceDictionary Source="Growl.xaml" />
+        <ResourceDictionary Source="Slider.xaml" />
+        <ResourceDictionary Source="ScrollViewer.xaml" />
+        <ResourceDictionary Source="NumericUpDown.xaml" />
+        <ResourceDictionary Source="TextBox.xaml" />
+        <ResourceDictionary Source="ColorPicker.xaml" />
+        <ResourceDictionary Source="Loading.xaml" />
+        <ResourceDictionary Source="PasswordBox.xaml" />
+        <ResourceDictionary Source="RadioButton.xaml" />
+        <ResourceDictionary Source="ButtonGroup.xaml" />
+        <ResourceDictionary Source="ProgressBar.xaml" />
+        <ResourceDictionary Source="ImageViewer.xaml" />
+        <ResourceDictionary Source="Pagination.xaml" />
+        <ResourceDictionary Source="ComboBox.xaml" />
+        <ResourceDictionary Source="DataGrid.xaml" />
+        <ResourceDictionary Source="ContextMenu.xaml" />
+        <ResourceDictionary Source="CheckBox.xaml" />
+        <ResourceDictionary Source="SearchBar.xaml" />
+        <ResourceDictionary Source="Weather.xaml" />
+        <ResourceDictionary Source="ToggleBlock.xaml" />
+        <ResourceDictionary Source="Expander.xaml" />
+        <ResourceDictionary Source="Calendar.xaml" />
+        <ResourceDictionary Source="Clock.xaml" />
+        <ResourceDictionary Source="CalendarWithClock.xaml" />
+        <ResourceDictionary Source="DateTimePicker.xaml" />
+        <ResourceDictionary Source="DatePicker.xaml" />
+        <ResourceDictionary Source="RichTextBox.xaml" />
+        <ResourceDictionary Source="TabComboBox.xaml" />
+        <ResourceDictionary Source="Tag.xaml" />
+        <ResourceDictionary Source="Border.xaml" />
+        <ResourceDictionary Source="TabControl.xaml" />
+        <ResourceDictionary Source="Badge.xaml" />
+        <ResourceDictionary Source="StepBar.xaml" />
+        <ResourceDictionary Source="TreeView.xaml" />
+        <ResourceDictionary Source="ContentComboBox.xaml" />
+        <ResourceDictionary Source="ImageSelector.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
