--- a/src/Hjmos.CustomCharts/Themes/Styles/SectionPassengerFlowDistribution.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/SectionPassengerFlowDistribution.xaml
@@ -1,59 +1,86 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-                    xmlns:controls="clr-namespace:Hjmos.CustomCharts.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.CustomCharts.Controls"
+    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf">
 
     <Style TargetType="controls:SectionPassengerFlowDistribution">
-        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:SectionPassengerFlowDistribution">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"/>
-                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
-                            <Rectangle Width="20" Height="5" Margin="10,0,5,0" Fill="{Binding ElementName=UpFlow,Path=Fill}"/>
-                            <TextBlock Text="{Binding ElementName=UpFlow,Path=Title}" Foreground="White"/>
-                            <Rectangle Width="20" Height="5" Margin="10,0,5,0" Fill="{Binding ElementName=DownFlow,Path=Fill}"/>
-                            <TextBlock Text="{Binding ElementName=DownFlow,Path=Title}" Foreground="White"/>
+                        <StackPanel
+                            Grid.Row="0"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Orientation="Horizontal">
+                            <Rectangle
+                                Width="20"
+                                Height="5"
+                                Margin="10,0,5,0"
+                                Fill="{Binding ElementName=UpFlow, Path=Fill}" />
+                            <TextBlock Foreground="White" Text="{Binding ElementName=UpFlow, Path=Title}" />
+                            <Rectangle
+                                Width="20"
+                                Height="5"
+                                Margin="10,0,5,0"
+                                Fill="{Binding ElementName=DownFlow, Path=Fill}" />
+                            <TextBlock Foreground="White" Text="{Binding ElementName=DownFlow, Path=Title}" />
                         </StackPanel>
-                        <lvc:CartesianChart Grid.Row="1" >
+                        <lvc:CartesianChart Grid.Row="1" AddHeight="10">
                             <lvc:CartesianChart.AxisX>
-                                <lvc:Axis  Labels="{TemplateBinding Labels}"  Foreground="#FF8AB5BC" ShowIndicatorLine="True" ShowAxis="False" >
+                                <lvc:Axis
+                                    Foreground="#FF8AB5BC"
+                                    Labels="{TemplateBinding Labels}"
+                                    ShowAxis="False"
+                                    ShowIndicatorLine="True">
                                     <lvc:Axis.Separator>
-                                        <lvc:Separator Stroke="#2613FFF5" Step="1"/>
+                                        <lvc:Separator Step="1" Stroke="#2613FFF5" />
                                     </lvc:Axis.Separator>
                                 </lvc:Axis>
                             </lvc:CartesianChart.AxisX>
                             <lvc:CartesianChart.AxisY>
-                                <lvc:Axis  LabelFormatter="{TemplateBinding  Formatter}" AddHeight="10" Foreground="#FF8AB5BC"  ShowIndicatorLine="True" ShowAxis="False" >
+                                <lvc:Axis
+                                    Foreground="#FF8AB5BC"
+                                    LabelFormatter="{TemplateBinding Formatter}"
+                                    ShowAxis="False"
+                                    ShowIndicatorLine="True">
                                     <lvc:Axis.Separator>
-                                        <lvc:Separator  Stroke="#2613FFF5"/>
+                                        <lvc:Separator Stroke="#2613FFF5" />
                                     </lvc:Axis.Separator>
                                 </lvc:Axis>
                             </lvc:CartesianChart.AxisY>
                             <lvc:CartesianChart.Series>
-                                <lvc:StackedColumnSeries Values="{TemplateBinding UpFlowDatas}" x:Name="UpFlow" Title="上行" >
+                                <lvc:StackedColumnSeries
+                                    x:Name="UpFlow"
+                                    Title="上行"
+                                    Values="{TemplateBinding UpFlowDatas}">
                                     <lvc:StackedColumnSeries.Fill>
-                                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                            <GradientStop Color="#FF9FC9FF" Offset="0"/>
-                                            <GradientStop Color="#FF6699FF" Offset="1"/>
+                                        <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                            <GradientStop Offset="0" Color="#FF9FC9FF" />
+                                            <GradientStop Offset="1" Color="#FF6699FF" />
                                         </LinearGradientBrush>
                                     </lvc:StackedColumnSeries.Fill>
                                 </lvc:StackedColumnSeries>
-                                <lvc:StackedColumnSeries Values="{TemplateBinding DownFlowDatas}" x:Name="DownFlow"  Title="下行">
+                                <lvc:StackedColumnSeries
+                                    x:Name="DownFlow"
+                                    Title="下行"
+                                    Values="{TemplateBinding DownFlowDatas}">
                                     <lvc:StackedColumnSeries.Fill>
-                                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                            <GradientStop Color="#FF8AE8D0" Offset="0"/>
-                                            <GradientStop Color="#FF52CCA3" Offset="1"/>
+                                        <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                            <GradientStop Offset="0" Color="#FF8AE8D0" />
+                                            <GradientStop Offset="1" Color="#FF52CCA3" />
                                         </LinearGradientBrush>
                                     </lvc:StackedColumnSeries.Fill>
                                 </lvc:StackedColumnSeries>
                             </lvc:CartesianChart.Series>
                             <lvc:CartesianChart.DataTooltip>
-                                <lvc:DefaultTooltipNoPer ShowDataNumMax="1"  SelectionMode="SharedYInSeries"></lvc:DefaultTooltipNoPer>
+                                <lvc:DefaultTooltipNoPer SelectionMode="SharedYInSeries" ShowDataNumMax="1" />
                             </lvc:CartesianChart.DataTooltip>
                         </lvc:CartesianChart>
                     </Grid>
